--- a/src/main/resources/assets/rose_gold/lang/pt_br.json
+++ b/src/main/resources/assets/rose_gold/lang/pt_br.json
@@ -10,6 +10,7 @@
   "item.rose_gold.rose_gold_upgrade_smithing_template": "Melhoria de ouro rosé",
   "item.rose_gold.smithing_template.rose_gold_upgrade.applies_to": "Equipamento de ferro",
   "item.rose_gold.smithing_template.rose_gold_upgrade.ingredients": "Liga de ouro rosé",
+  "item.rose_gold.smithing_template.rose_gold_upgrade.base_slot_description": "Adicionar armadura de ferro, arma ou ferramenta",
   "item.rose_gold.smithing_template.rose_gold_upgrade.additions_slot_description": "Adicione liga de ouro rosé",
   "item.rose_gold.rose_gold_helmet": "Capacete de ouro rosé",
   "item.rose_gold.rose_gold_chestplate": "Peitoral de ouro rosé",
