Few more german-based translations

--- a/src/main/resources/assets/rose_gold/lang/de_de.json
+++ b/src/main/resources/assets/rose_gold/lang/de_de.json
@@ -1,5 +1,5 @@
 {
-  "tag.item.rose_gold.rose_gold_tool_materials": "Roségold Werkzeug Materialien",
+  "tag.item.rose_gold.rose_gold_tool_materials": "Roségold-Werkzeugmaterialien",
   "itemGroup.rose_gold": "Roségold",
   "item.rose_gold.rose_gold_alloy": "Roségoldlegierung",
   "item.rose_gold.rose_gold_sword": "Roségoldschwert",
