fix 1.21.4 support and add support for 1.21(.1)/1.21.5 + a lot of internal refactoring & updates. closes #2

--- a/src/main/resources/assets/rose_gold/lang/de_de.json
+++ b/src/main/resources/assets/rose_gold/lang/de_de.json
@@ -7,7 +7,7 @@
   "item.rose_gold.rose_gold_axe": "Roségoldaxt",
   "item.rose_gold.rose_gold_shovel": "Roségoldschaufel",
   "item.rose_gold.rose_gold_hoe": "Roségoldhacke",
-  "item.rose_gold.rose_gold_upgrade_smithing_template": "Roségoldaufwertung",
+  "item.rose_gold.rose_gold_upgrade_smithing_template": "Schmiedevorlage",
   "item.rose_gold.smithing_template.rose_gold_upgrade.applies_to": "Eisenausrüstung",
   "item.rose_gold.smithing_template.rose_gold_upgrade.ingredients": "Roségoldlegierung",
   "item.rose_gold.smithing_template.rose_gold_upgrade.base_slot_description": "Rüstungsteil, Werkzeug oder Schwert aus Eisen hinzufügen",
@@ -15,5 +15,6 @@
   "item.rose_gold.rose_gold_helmet": "Roségoldhelm",
   "item.rose_gold.rose_gold_chestplate": "Roségoldlegierungharnisch",
   "item.rose_gold.rose_gold_leggings": "Roségoldbeinschutz",
-  "item.rose_gold.rose_gold_boots": "Roségoldstiefel"
+  "item.rose_gold.rose_gold_boots": "Roségoldstiefel",
+  "upgrade.rose_gold.rose_gold_upgrade": "Roségoldaufwertung"
 }
