--- a/src/main/resources/assets/rose_gold/lang/en_gb.json
+++ b/src/main/resources/assets/rose_gold/lang/en_gb.json
@@ -15,5 +15,6 @@
   "item.rose_gold.rose_gold_helmet": "Rose Gold Helmet",
   "item.rose_gold.rose_gold_chestplate": "Rose Gold Chestplate",
   "item.rose_gold.rose_gold_leggings": "Rose Gold Leggings",
-  "item.rose_gold.rose_gold_boots": "Rose Gold Boots"
+  "item.rose_gold.rose_gold_boots": "Rose Gold Boots",
+  "upgrade.rose_gold.rose_gold_upgrade": "Rose Gold Upgrade"
 }
