--- a/src/main/resources/assets/rose_gold/lang/en_us.json
+++ b/src/main/resources/assets/rose_gold/lang/en_us.json
@@ -7,7 +7,7 @@
   "item.rose_gold.rose_gold_axe": "Rose Gold Axe",
   "item.rose_gold.rose_gold_shovel": "Rose Gold Shovel",
   "item.rose_gold.rose_gold_hoe": "Rose Gold Hoe",
-  "item.rose_gold.rose_gold_upgrade_smithing_template": "Rose Gold Upgrade",
+  "item.rose_gold.rose_gold_upgrade_smithing_template": "Smithing Template",
   "item.rose_gold.smithing_template.rose_gold_upgrade.applies_to": "Iron Equipment",
   "item.rose_gold.smithing_template.rose_gold_upgrade.ingredients": "Rose Gold Alloy",
   "item.rose_gold.smithing_template.rose_gold_upgrade.base_slot_description": "Add iron armor, weapon or tool",
@@ -15,5 +15,6 @@
   "item.rose_gold.rose_gold_helmet": "Rose Gold Helmet",
   "item.rose_gold.rose_gold_chestplate": "Rose Gold Chestplate",
   "item.rose_gold.rose_gold_leggings": "Rose Gold Leggings",
-  "item.rose_gold.rose_gold_boots": "Rose Gold Boots"
+  "item.rose_gold.rose_gold_boots": "Rose Gold Boots",
+  "upgrade.rose_gold.rose_gold_upgrade": "Rose Gold Upgrade"
 }
