--- a/src/main/resources/assets/rose_gold/lang/enp.json
+++ b/src/main/resources/assets/rose_gold/lang/enp.json
@@ -3,17 +3,18 @@
   "itemGroup.rose_gold": "Pink Gold",
   "item.rose_gold.rose_gold_alloy": "Pink Gold Mix",
   "item.rose_gold.rose_gold_sword": "Pink Gold Sword",
-  "item.rose_gold.rose_gold_pickaxe": "Pink Gold Pickaxe",
+  "item.rose_gold.rose_gold_pickaxe": "Pink Gold Pike",
   "item.rose_gold.rose_gold_axe": "Pink Gold Axe",
   "item.rose_gold.rose_gold_shovel": "Pink Gold Shovel",
-  "item.rose_gold.rose_gold_hoe": "Pink Gold Hoe",
-  "item.rose_gold.rose_gold_upgrade_smithing_template": "Pink Gold Upgrade",
-  "item.rose_gold.smithing_template.rose_gold_upgrade.applies_to": "Iron Gear",
+  "item.rose_gold.rose_gold_hoe": "Pink Gold Tiller",
+  "item.rose_gold.rose_gold_upgrade_smithing_template": "Smithing Forelay",
+  "item.rose_gold.smithing_template.rose_gold_upgrade.applies_to": "Iron Things",
   "item.rose_gold.smithing_template.rose_gold_upgrade.ingredients": "Pink Gold Mix",
-  "item.rose_gold.smithing_template.rose_gold_upgrade.base_slot_description": "Fay iron begear, weapon or tool",
-  "item.rose_gold.smithing_template.rose_gold_upgrade.additions_slot_description": "Fay pink gold mix",
+  "item.rose_gold.smithing_template.rose_gold_upgrade.base_slot_description": "Eke iron hirsting, weapon or tool",
+  "item.rose_gold.smithing_template.rose_gold_upgrade.additions_slot_description": "Eke Pink Gold Mix",
   "item.rose_gold.rose_gold_helmet": "Pink Gold Helm",
-  "item.rose_gold.rose_gold_chestplate": "Pink Gold Chesthelm",
+  "item.rose_gold.rose_gold_chestplate": "Pink Gold Chestshield",
   "item.rose_gold.rose_gold_leggings": "Pink Gold Leggings",
-  "item.rose_gold.rose_gold_boots": "Pink Gold Boots"
+  "item.rose_gold.rose_gold_boots": "Pink Gold Shoes",
+  "upgrade.rose_gold.rose_gold_upgrade": "Pink Gold Bolster"
 }
