--- a/src/main/resources/assets/rose_gold/lang/enws.json
+++ b/src/main/resources/assets/rose_gold/lang/enws.json
@@ -7,13 +7,14 @@
   "item.rose_gold.rose_gold_axe": "Rosy Aurum Axe",
   "item.rose_gold.rose_gold_shovel": "Rosy Aurum Spade",
   "item.rose_gold.rose_gold_hoe": "Rosy Aurum Hoe",
-  "item.rose_gold.rose_gold_upgrade_smithing_template": "Rosy Aurum Upgradeth",
+  "item.rose_gold.rose_gold_upgrade_smithing_template": "Smithing Template",
   "item.rose_gold.smithing_template.rose_gold_upgrade.applies_to": "Iron Equipment",
   "item.rose_gold.smithing_template.rose_gold_upgrade.ingredients": "Rosy Aurum Alloy",
   "item.rose_gold.smithing_template.rose_gold_upgrade.base_slot_description": "Addeth iron armour, weapon or implement",
-  "item.rose_gold.smithing_template.rose_gold_upgrade.additions_slot_description": "Addeth rosy aurum alloy",
+  "item.rose_gold.smithing_template.rose_gold_upgrade.additions_slot_description": "Addeth Rosy Aurum Alloy",
   "item.rose_gold.rose_gold_helmet": "Rosy Aurum Helmet",
   "item.rose_gold.rose_gold_chestplate": "Rosy Aurum Breastplate",
   "item.rose_gold.rose_gold_leggings": "Rosy Aurum Greaves",
-  "item.rose_gold.rose_gold_boots": "Rosy Aurum Sabatons"
+  "item.rose_gold.rose_gold_boots": "Rosy Aurum Sabatons",
+  "upgrade.rose_gold.rose_gold_upgrade": "Rosy Aurum Reform"
 }
